@@ -4,6 +4,9 @@ this repository contains the full copyright notices and license terms. -->
 <form>
     <label name="name"/>
     <field name="name"/>
+    <label name="active"/>
+    <field name="active"/>
+
     <label name="company"/>
     <field name="company"/>
     <label name="currency"/>
