@@ -1,3 +1,4 @@
+* Allow payment journal to be deactivated
 * Allow going back to processing state
 * Add aggregated information on Payment groups
 
